--- a/ci/tasks/use-configs.yml
+++ b/ci/tasks/use-configs.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: governmentpaas/spruce
+    repository: mcareysolstice/spruce
 
 inputs:
 - name: config
